k8s-resource-manifests/iac-builder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iac-builder
spec:
  selector:
    matchLabels:
      app: iac-builder
  replicas: 1
  template:
    metadata:
      labels:
        app: iac-builder
    spec:
      containers:
      - image: sodaliteh2020/iac-blueprint-builder:M24Release
        name: iac-builder
        ports:
        - containerPort: 8081
          protocol: TCP
