k8s-resource-manifests/iac-builder/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: iac-builder
  namespace: sodalite-services
spec:
  ports:
  - name: iac-builder
    port: 80 
    protocol: TCP
    targetPort: 8081
  selector:
    app: iac-builder
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
