k8s-resource-manifests/iac-builder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iac-builder-ingress
  namespace: sodalite-services
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iac-builder
            port:
              name: iac-builder
